--- a/appellancysettings/Resources/AppellancySettings.plist
+++ b/appellancysettings/Resources/AppellancySettings.plist
@@ -7,8 +7,8 @@
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
-			<key>label</key>
-			<string>Appellancy</string>
+			<key>footerText</key>
+			<string>ENABLED_DESCRIPTION</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -23,277 +23,48 @@
 			<string>ENABLED</string>
 			<key>PostNotification</key>
 			<string>com.efrederickson.appellancy/reloadSettings</string>
+			<key>cellClass</key>
+			<string>AppellancyTintedSwitchCell</string>
+			<key>icon</key>
+			<string>enabled.png</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>ActualSettingsListController</string>
+			<key>label</key>
+			<string>OPTIONS</string>
+			<key>icon</key>
+			<string>settings.png</string>
+			<key>cellClass</key>
+			<string>AppellancyTintedCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>MakersListController</string>
+			<key>label</key>
+			<string>MAKERS</string>
+			<key>icon</key>
+			<string>maker.png</string>
+			<key>cellClass</key>
+			<string>AppellancyTintedCell</string>
 		</dict>
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>footerText</key>
-			<string>DISABLEFORNOTIFICATIONS_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<true/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>disableForNotifications</string>
-			<key>label</key>
-			<string>DISABLEFORNOTIFICATIONS</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>DISABLEFORANYNOTIFICATIONS_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>disableForAnyNotifications</string>
-			<key>label</key>
-			<string>DISABLEFORANYNOTIFICATIONS</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>ONLYSTARTONSWIPE_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>onlyStartOnSwipe</string>
-			<key>label</key>
-			<string>ONLYSTARTONSWIPE</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>DISABLEONMUSIC_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<true/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>notWhenMusic</string>
-			<key>label</key>
-			<string>DISABLEONMUSIC</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>STARTONSWIPE_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<true/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>startOnSwipe</string>
-			<key>label</key>
-			<string>STARTONSWIPE</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>DENYENTRY_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>showDenyEntry</string>
-			<key>label</key>
-			<string>DENYENTRY</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>SHOWIMAGE_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<true/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>showImage</string>
-			<key>label</key>
-			<string>SHOWIMAGE</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>GUESTMODE_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>startGuestModeOnFail</string>
-			<key>label</key>
-			<string>GUESTMODE</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>DONTCHANGE1_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>dontChange1</string>
-			<key>label</key>
-			<string>DONTCHANGE1</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>DONTCHANGE2_FOOTER</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<false/>
-			<key>defaults</key>
-			<string>com.efrederickson.appellancysettings</string>
-			<key>key</key>
-			<string>dontChange2</string>
-			<key>label</key>
-			<string>DONTCHANGE2</string>
-			<key>PostNotification</key>
-			<string>com.efrederickson.appellancy/reloadSettings</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>label</key>
-			<string>Developer/other information</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>openTwitter</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>@daementor on Twitter</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>openGithub</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>@mlnlover11 on GitHub</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>sendEmail</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Contact developer via email</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>sendEmail_FR</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Feature request</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>label</key>
-			<string>Artist information</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>openArtistSite</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Website</string>
-		</dict>
-		<dict>
-			<key>action</key>
-			<string>openArtistRepo</string>
-			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Cydia Repo</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>Copyright (C) 2014 Elijah Frederickson. Graphics provided by Andrew Abosh. Translations by @Azzo994, @ldehaas1612, @iMatt2CP, @rgalezo, Muhammed Gül</string>
+			<string>Copyright (C) 2014 Elijah Frederickson.</string>
 		</dict>
 	</array>
 	<key>title</key>
